--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "chrome-launcher": "^1.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "lighthouse": "^12.4.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
     "typescript": "^5"
-  }
+  },
+  "type": "module"
 }
